--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.getinfo">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GetInfo">
+        <activity
+            android:name=".DashBoardUser"
+            android:exported="false" />
+        <activity
+            android:name=".UserLogIn"
+            android:exported="false" />
+        <activity
+            android:name=".ForgetPassword"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpUser"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpAdmin"
+            android:exported="false" />
         <activity
             android:name=".MainLogin"
             android:exported="true">
