--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chiron">
         <activity
+            android:name=".GuestMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".UserMainActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".DashBoardUser"
             android:exported="false" />
