Added More Details Activity for User's Selected Item

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.evolver.chiron" >
+    package="com.evolver.chiron">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Chiron" >
+        android:theme="@style/Theme.Chiron">
+        <activity
+            android:name=".UserSelectedHospitalActivity"
+            android:exported="false" />
         <activity
             android:name=".AdminForgetPassword"
             android:exported="false" />
@@ -40,7 +43,7 @@
             android:exported="false" />
         <activity
             android:name=".MainLogin"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
