--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.evolver.chiron">
+    package="com.evolver.chiron" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,18 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Chiron">
+        android:theme="@style/Theme.Chiron" >
         <activity
-            android:name=".user.UserCovidTrackerCountryDetailAnalysis"
-            android:exported="false"
-            android:parentActivityName=".user.UserCovidCountryTracker"/>
-        <activity
-            android:name=".user.UserCovidCountryTracker"
-            android:exported="false"
-            />
+            android:name=".user.UserCovidCountryActivity"
+            android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -64,7 +59,7 @@
 
         <service
             android:name=".PushNotification"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
